# wik

./: .coverage.thinkpad.57964.XVGgPiDx  .gitignore  pyproject.toml
src/wik/: __main__.py  info.py  wik.py
tests/: test_.py  test_examples.py
