
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wik"
authors = [{name = "Yash Singh", email = "mailmeatyashsingh@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console"
]
dependencies = ["beautifulsoup4", "requests"]

[project.urls]
Home = "https://github.com/yashsinghcodes/wik"

[project.optional-dependencies]
dev = ["flit"]


